--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,13 @@
   background-color: rgba(0,0,0, 0.7);
   border-radius: 2px;
 }
+
+.flash-alert {
+  animation: fadeOut 3s ease forwards;
+}
+
+@keyframes fadeOut {
+  0% {opacity: 1}
+  70% { opacity: 1}
+  100% {opacity: 0}
+}
